# VoiceClarityMeter

./: .replit  INSTALL_LOCAL.md  README_DEPLOYMENT.md  app.py  app_simple.py  call_manager.py  certificate_manager.py  config_helper.py  database.py  download_files.sh  gateway_auth_config.txt  gateway_config_simple.txt  gateway_config_welcome.md  generate_gateway_config.py  install_local.sh  install_ubuntu.sh  models.py  mos_calculator.py  pyproject.toml  replit.md  replit_auth.py  requirements-local.txt  rtp_processor.py  setup_local_welcome.py  sip_registrar.py  sip_server.py  sip_server_tcp.py  start_server.sh  test_dependencies.py  test_mos_debug.py  webapp_profile_config.txt  webapp_profile_no_auth.txt  welcome_config_locale.sh  welcome_gateway_config_192_168_1_100.txt  welcome_gateway_locale.txt  welcome_local_config.txt
attached_assets/: 685d12479e3be_d4a78cb8c5dd6a3bc065_1750930431820  685d1801db673_ebc1a0cc09620d1871af_1750931567727  call-fail_1750928175163.pcapng  call-fail_1750928318526.txt  call-fail_1750928527092.txt  call-fail_1750928687243.txt  call-fail_1750929010167.txt  registration-fail-microsip_1750864527797.txt  registration-fail-microsip_1750865280258.txt
certificates/: ca-cert.pem  ca-private-key.pem  sip-server.local-bundle.pem  sip-server.local-cert.pem  sip-server.local-private-key.pem  test-client-201-cert.pem  test-client-201-private-key.pem  test-client-201.p12
static/css/: style.css
static/js/: certificates.js  config.js  dashboard.js  (+1 more)
templates/: auth_error.html  certificates.html  config.html  dashboard.html  index.html
